@@ -18,6 +18,9 @@ Features & Interface
 
 * Removed deprecated attribute and functions.
 
+* alternateMethodName for all unique fields, not only alternateID; this
+  makes SQLObject create by*() methods for all unique fields.
+
 SQLObject 0.11
 ==============
 
